<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">News App</string>
    <string name="disconnected">No internet connection found.</string>
    <string name="invalid_response_code_message">Problem with the connection, please try again later.</string>
    <string name="empty_list">\"No data available.  Please check your connection or try again later.\"</string>
    <string name="categoryTextPlaceholder">Category</string>
    <string name="headlinePlaceholder">Long placeholder headline that should wrap to more than 2 lines of text</string>
    <string name="dateTextPlaceholder">Mar 6, 2010</string>
    <string name="timeTextPlaceholder">3:00 PM</string>
    <string name="noInternet">No internet connection detected. Please check your connection and try again.</string>
    <string name="authorPlaceholder">Author Name</string>
    <string name="unknownAuthor">Unknown</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">NewsApp Settings</string>
    <string name="settings_article_topic_label">Article topic</string>
    <string name="settings_article_topic_key" translatable="false">article_topic</string>
    <string name="settings_article_topic_default" translatable="false">algorithms</string>
    <string name="settings_star_rating_label">Star Rating</string>
    <string name="settings_star_rating_key" translatable="false">star_ratable</string>
    <string name="settings_star_rating_default" translatable="false">1</string>
</resources>
