<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_article_topic_default"
        android:inputType="textAutoCorrect"
        android:key="@string/settings_article_topic_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_article_topic_label" />
    <EditTextPreference
        android:defaultValue="@string/settings_star_rating_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_star_rating_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_star_rating_label" />

</PreferenceScreen>