<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/margin16"
    android:paddingLeft="@dimen/margin16"
    android:paddingRight="@dimen/margin16"
    android:paddingStart="@dimen/margin8">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/textColorArticleCategory"
            android:textSize="@dimen/categoryTextSize"
            android:typeface="sans"
            tools:text="@string/categoryTextPlaceholder" />


        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/textColorArticleHeadline"
            android:textSize="@dimen/categoryTextSize"
            tools:text="@string/headlinePlaceholder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/textColorArticleCategory"
            android:textSize="@dimen/categoryTextSize"
            tools:text="@string/dateTextPlaceholder" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/textColorArticleCategory"
            android:textSize="@dimen/categoryTextSize"
            tools:text="@string/timeTextPlaceholder" />

    </LinearLayout>
</LinearLayout>